--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
+  dotted_border: ^2.1.0
   firebase_auth: ^5.4.0
   firebase_core: ^3.10.0
   firebase_storage: ^12.4.0
   flutter:
     sdk: flutter
   gap: ^3.0.1
+  image_picker: ^1.1.2
   provider: ^6.1.2
 
 dev_dependencies:
