--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  agora_rtc_engine: ^6.5.0
   cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
   dotted_border: ^2.1.0
@@ -37,7 +38,9 @@ dependencies:
   flutter:
     sdk: flutter
   gap: ^3.0.1
+  http: ^1.3.0
   image_picker: ^1.1.2
+  permission_handler: ^11.3.1
   provider: ^6.1.2
 
 dev_dependencies:
