--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   provider: ^6.1.2
+  timeago: ^3.7.0
   uuid: ^4.5.1
 
 dev_dependencies:
